Added email sending

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -41,6 +41,8 @@ unit.not.found=Unit not found
 
 user.not.found=User not found
 user.not.verified=User not verified
+user.password.reset.link.sent=Password reset link sent to email
+user.password.reset.mail.subject=Reset your password
 
 sms.sent=SMS sent
 sms.cannot.send=Cannot send SMS
@@ -60,3 +62,12 @@ password.changed=Password changed successfully
 state.active.or.all=State can be active or all
 
 verified.successfully=Successfully verified
+
+# Email template
+reset.password.email.template=Hello user\n\
+  Someone asked to reset your password. If it's you, this is your new token.\n\
+  \n\
+  {0}\n\
+  \n\
+  Thanks\n\
+  Bit Makers Ltd.
